<resources>
    <string name="app_name" translatable="false">Pizzania</string>
    <string name="open_nav" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav" translatable="false">Close Navigation Drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_grid_item_layout" translatable="false">Your Title Here</string>
    <string name="nav_home">Home</string>
    <string name="abt_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="deliv">Pizza Delivery</string>
    <string name="size">Pizza Size:</string>
    <string name="quantity">Quantity:</string>
    <string name="toppings">Toppings</string>
    <string name="bbq">BBQ Meat</string>
    <string name="butter">Butter and Chili</string>
    <string name="chicago">Chicago Style</string>
    <string name="brick">Brick Oven Pizza</string>
    <string name="italian">Italian Pizza</string>
    <string name="neapolitan">Neapolitan Pizza</string>
    <string name="california">California Pizza</string>
    <string name="york">New York Style</string>
    <string name="sicilian">Sicilian Pizza</string>
    <string name="greek">Greek Pizza</string>
    <string name="ok">OK</string>
    <string name="recent">Recent News</string>
    <string name="snake">Snake pizza in Pizza Hut 09 Nov, 2023, 02:41 AM IST</string>
    <string name="order">Pizza Order</string>
    <string name="press">If you want to order pizza press here</string>
    <string name="htf">Head To Form</string>
    <string name="address">Tallet el Khayat, Beirut, Lebanon</string>
    <string name="mail" translatable="false">abdallah.tourbah@lau.edu</string>
    <string name="mobile">+961 3 900 895</string>
    <string name="wait">Please wait this will take a while...</string>
    <string name="fullname">Please enter your full name</string>
    <string name="txtfullname">Full Name</string>
    <string name="username">Please enter Username</string>
    <string name="txtuser">Username</string>
    <string name="password">Please enter Password</string>
    <string name="txtpass">Password</string>
    <string name="number">Please enter Phone Number</string>
    <string name="txtphone">Phone Number</string>
    <string name="signupbtn">Signup</string>
    <string name="loginbtn">Login</string>
    <string name="medium">Medium Text</string>
    <string name="tv">TextView</string>
    <string name="ccn">Credit Card Number</string>
    <string name="enterccn">Enter Credit Card Number</string>
    <string name="ssn">Security Code (CVV)</string>
    <string name="enterssn">Enter Security Code</string>
    <string name="sd">Start Date</string>
    <string name="ed">End Date</string>
    <string name="date" translatable="false">YYYY/MM</string>
    <string name="pp">Process Payment</string>
    <string name="wlc">Welcome to Pizzania</string>
    <string name="gs">Get Started</string>
    <string name="choice">Please choose ur pizza:</string>
</resources>