<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"
            style="@style/MenuItemStyle"/>

        <item
            android:id="@+id/nav_order"
            android:title="@string/abt_us"
            android:icon="@drawable/ic_about_us"
            style="@style/MenuItemStyle"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/logout"/>
        </menu>

    </item>


</menu>
