<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/text_margin"
    android:background="@color/teal_200"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="@dimen/text_margin"
        android:hint="@string/txtuser"/>

    <TextView
        android:id="@+id/passowrd"
        android:layout_below="@id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passowrd"
        android:layout_marginTop="@dimen/margin8"
        android:inputType="textPassword"
        android:hint="@string/txtpass"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="@dimen/text_margin"
        android:orientation="horizontal">
       <Button
           android:id="@+id/btnLogin"
           android:layout_marginLeft="@dimen/margin50"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/editTextPassword"
           android:layout_marginTop="@dimen/text_margin"
           android:text="@string/loginbtn"
           android:onClick="OnLoginClick"/>

       <Button
           android:id="@+id/btnSignup"
           android:layout_marginLeft="@dimen/margin100"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/btnLogin"
           android:layout_marginTop="@dimen/text_margin"
           android:text="@string/signupbtn"
           android:onClick="OnSignupClick"/>
    </LinearLayout>

</RelativeLayout>

