<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent"
        android:textStyle="bold"
        android:padding="@dimen/margin20"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/news"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/new1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snake"/>
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/new1"
            android:id="@+id/img1"
            android:src="@drawable/download5"
            android:clickable="true"
            android:onClick="openWebpage"/>
        <TextView
            android:id="@+id/org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textStyle="bold"
            android:padding="@dimen/margin20"/>
        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin50">
        </ListView>
        <TextView
            android:id="@+id/question"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/list"
            android:text="@string/press"/>
        <Button
            android:id="@+id/questionbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/questionbtn"
            android:text="@string/htf"/>

    </GridLayout>
</RelativeLayout>